# rustversion-msrv

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: error.rs  expand.rs  expr.rs  iter.rs  lib.rs  release.rs  time.rs  token.rs  version.rs
tests/: compiletest.rs  msrv.rs  test_const.rs  test_eval.rs
tests/ui/: bad-bound.rs  bad-bound.stderr  bad-date.rs  bad-date.stderr  bad-not.rs  bad-not.stderr  bad-version.rs  bad-version.stderr  const-not-fn.rs  const-not-fn.stderr
