[package]
name = "rustversion-msrv"
version = "0.99.16"
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
build = "build/build.rs"
categories = ["development-tools::build-utils", "no-std", "no-std::no-alloc"]
description = "Conditional compilation according to rustc compiler version + MSRV support"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robjtede/rustversion-msrv"
rust-version = "1.31"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
