[package]
name = "rustversion-msrv"
version = "0.99.16"
description = "Conditional compilation according manifest MSRV"
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
categories = ["development-tools::build-utils", "no-std", "no-std::no-alloc"]
repository = "https://github.com/robjtede/rustversion-msrv"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.56"
build = "build/build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[lints.clippy]
test_attr_in_doctest = { level = "allow" }
